--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,28 @@
 * {
     margin: 0;
     padding: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+html {
     box-sizing: border-box;
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'Open-sans', sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
+    background-image: linear-gradient(
+        to right bottom,
+        color($primary, light),
+        color($primary, dark));
+    background-size: cover;
+    min-height: 100vh;
+    color: color($grey, darkest);
 }
