--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,9 +20,9 @@ body {
     line-height: 1.6;
     background-image: linear-gradient(
         to right bottom,
-        color($primary, light),
-        color($primary, dark));
+        color(light, primary),
+        color(dark, primary));
     background-size: cover;
     min-height: 100vh;
-    color: color($grey, darkest);
+    color: color(darkest, grey);
 }
