--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,3 +1,3 @@
 @mixin boxshadow {
-    box-shadow: 0 2rem 4rem rgba(color($grey, black), .3);
+    box-shadow: 0 2rem 4rem rgba(color(black, grey), .3);
 }
