--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,7 +1,7 @@
 .container {
     max-width: 120rem;
     margin: 8rem auto;
-    background: color(lighter, grey);
+    background: color(grey, lighter);
     @include boxshadow;
 
     min-height: 20rem;
@@ -9,8 +9,8 @@
 
 .header {
     height: 7rem;
-    background-color: color(white, grey);
-    border-bottom: color(lighter, grey);
+    background-color: color(grey, white);
+    border-bottom: color(grey, lighter);
 }
 
 .content {
@@ -18,11 +18,11 @@
 }
 
 .sidebar {
-    background-color: color(dark, grey);
+    background-color: color(grey, dark);
     flex: 0 0 18%;
 }
 
 .hotel-view {
-    background-color: color(white, grey);
+    background-color: color(grey, white);
     flex: 1;
 }
