--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,23 +1,18 @@
 $colors: (
-    text: #000,
-    background: #333,
-
+    background: #000,
     primary: (
         base: #eb2f64,
         light: #FF3366,
         dark: #BA265D
-    )
-
+    ),
     secondary: (
         light: #ffb900,
         dark: #ff7730
-    )
-
+    ),
     teritairy: (
         light: #2998ff,
-        dark: #5643fa,
-    )
-
+        dark: #5643fa
+    ),
     grey: (
         black: #000,
         darkest: #333,
@@ -30,14 +25,14 @@ $colors: (
     )
 );
 
-@function color($name, $group:null) {
-
-    @if ($group != null) {
-        @return map-get(map-get($colors, $name), $group);
+@function color($name, $group-name: null) {
+    @if ($group-name != null) {
+        @return map-get(map-get($colors, $name), $group-name);
     } @else {
         @return map-get($colors, $name);
     }
 }
+
 
 // font-sizes
 $default-font-size: 1.6rem;
