--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,12 @@ body {
 
 .header {
   height: 7rem;
+  font-size: 1.4rem;
   background-color: #FFF;
-  border-bottom: #f7f7f7; }
+  border-bottom: #f7f7f7;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
 .content {
   display: flex; }
@@ -44,17 +48,80 @@ body {
   flex: 1; }
 
 .logo {
-  height: 3.25rem; }
-
-.search__icon {
-  height: 2rem;
-  width: 2rem; }
-
-.user-nav__icon {
-  height: 2.25rem;
-  width: 2.25rem; }
-
-.user-nav__user-photo {
   height: 3.25rem;
-  width: 3.25rem;
-  border-radius: 50%; }
+  margin: 2rem; }
+
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .search__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: #f7f7f7;
+    border: none;
+    padding: .7rem 2rem;
+    border-radius: 100px;
+    width: 90%;
+    margin-right: -3.25rem;
+    transition: all 250ms; }
+    .search__input:focus {
+      outline: none;
+      width: 100%;
+      background: #ccc; }
+    .search__input::-webkit-input-placeholder {
+      font-weight: 100;
+      color: #EEE; }
+  .search__input:focus + .search__button {
+    background: #ccc; }
+  .search__button {
+    border: none;
+    background: #f7f7f7;
+    transition: all 250ms; }
+    .search__button:focus {
+      outline: none; }
+    .search__button:active {
+      transform: translateY(2px); }
+  .search__icon {
+    height: 2rem;
+    width: 2rem;
+    fill: #ccc; }
+
+.user-nav {
+  display: flex;
+  align-items: center;
+  align-self: stretch; }
+  .user-nav > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center; }
+  .user-nav > *:hover {
+    background: #EEE; }
+  .user-nav__icon-box {
+    position: relative; }
+  .user-nav__icon {
+    height: 2.25rem;
+    width: 2.25rem;
+    fill: #333; }
+  .user-nav__notification {
+    font-size: .8rem;
+    height: 1.9rem;
+    width: 1.9rem;
+    border-radius: 50%;
+    background: #eb2f64;
+    color: #FFF;
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .user-nav__user-photo {
+    height: 3.25rem;
+    width: 3.25rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
