--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,8 +9,12 @@
 
 .header {
     height: 7rem;
+    font-size: 1.4rem;
     background-color: color(grey, white);
     border-bottom: color(grey, lighter);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content {
