--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,34 +1,103 @@
 .logo {
     height: 3.25rem;
+    margin: 2rem;
 }
 
 .search {
-    &__input {
+    flex: 0 0 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+    &__input {
+        font-family: inherit;
+        font-size: inherit;
+        color: inherit;
+        background: color(grey, lighter);
+        border: none;
+        padding: .7rem 2rem;
+        border-radius: 100px;
+        width: 90%;
+        margin-right: -3.25rem;
+        transition: all 250ms;
+
+        &:focus {
+            outline: none;
+            width: 100%;
+            background: color(grey, light);
+        }
+
+        &::-webkit-input-placeholder {
+            font-weight: 100;
+            color: color(grey, lightest);
+        }
+    }
+
+    &__input:focus + &__button {
+        background: color(grey, light);
     }
 
     &__button {
+        border: none;
+        background: color(grey, lighter);
+        transition: all 250ms;
 
+        &:focus {
+            outline: none;
+        }
+
+        &:active {
+            transform: translateY(2px);
+        }
     }
 
     &__icon {
         height: 2rem;
         width: 2rem;
+        fill: color(grey, light);
     }
 }
 
 .user-nav {
-    &__icon-box {
+    display: flex;
+    align-items: center;
+    align-self: stretch;
 
+    & > * {
+        padding: 0 2rem;
+        cursor: pointer;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
+
+    & > *:hover {
+        background: color(grey, lightest);
+    }
+
+    &__icon-box {
+        position: relative;
     }
 
     &__icon {
         height: 2.25rem;
         width: 2.25rem;
+        fill: color(grey, darkest);
     }
 
     &__notification {
-
+        font-size: .8rem;
+        height: 1.9rem;
+        width: 1.9rem;
+        border-radius: 50%;
+        background: color(primary, base);
+        color: color(grey, white);
+        position: absolute;
+        top: 1.5rem;
+        right: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__user {
@@ -39,6 +108,7 @@
         height: 3.25rem;
         width: 3.25rem;
         border-radius: 50%;
+        margin-right: 1rem;
     }
 
     &__user-name {
