--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,17 @@ body {
     width: 3.25rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+.side-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .side-nav__icon {
+    width: 1.75rem;
+    height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: #f7f7f7; }
