--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,8 +22,11 @@
 }
 
 .sidebar {
-    background-color: color(grey, dark);
+    background-color: color(grey, darkest);
     flex: 0 0 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
