--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -1,19 +1,59 @@
 .side-nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    font-size: 1.4rem;
+    list-style: none;
+    margin-top: 3.5rem;
 
     &__item {
+        position: relative;
 
+        &:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 3px;
+            background: color(primary, base);
+            transform: scaleY(0);
+            transition: transform 200ms, 
+                        width 400ms cubic-bezier(1,0,0,1) 200ms
+                        background 100ms;
+        }
+
+        &:active::before {
+            background: color(primary, light);
+        }
+
+        &:hover::before,
+        &--active::before {
+            transform: scaleY(1);
+            width: 100%;
+        }
     }
 
-    &__link {
+    &__link:link,
+    &__link:visited {
+        color: color(grey, lightest);
+        text-decoration: none;
+        text-transform: uppercase;
+        display: block;
+        padding: 1.5rem 3rem;
 
+        display: flex;
+        align-items: center;
+        z-index: 10;
+        position: relative;
     }
 
     &__icon {
         width: 1.75rem;
         height: 1.75rem;
+        margin-right: 2rem;
+        fill: currentColor;
     }
 }
 
