--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,5 @@
 // Components
 @import 'components/header.scss';
 @import 'components/sidebar';
+@import 'components/gallery';
+@import 'components/overview';
