--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     height: 7rem;
     font-size: 1.4rem;
     background-color: color(grey, white);
-    border-bottom: color(grey, lighter);
+    border-bottom: 1px solid color(grey, light);
     display: flex;
     justify-content: space-between;
     align-items: center;
