--- a/sass/components/_overview.scss
+++ b/sass/components/_overview.scss
@@ -1,7 +1,7 @@
 .overview {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid color(grey, light);
+    @include borderbottom;
 
     &__heading {
         font-size: 2.25rem;
