--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -44,6 +44,7 @@
 .description {
     font-size: 1.4rem;
     flex: 0 0 60%;
+    padding: 2.5rem;
     margin-right: 4.5rem;
     background: color(grey, white);
     @include boxshadowlight;
