--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -1,18 +1,54 @@
 .description {
     &__paragraph {
-
+        &:not(:last-of-type) {
+            margin-bottom: 2rem;
+        }
     }
 
     &__list {
-        &-item {
+        margin: 3rem 0;
+        list-style: none;
+        padding: 3rem 0;
+        border-top: 1px solid color(grey, light);
+        @include borderbottom;
 
+        display: flex;
+        flex-wrap: wrap;
+
+        &-item {
+            flex: 0 0 50%;
+            margin-bottom: .7rem;
+
+            &::before {
+                content: '';
+                display: inline-block;
+                height: 1rem;
+                width: 1rem;
+                margin-right: 1rem;
+
+                // Newer browsers 
+                background: color(primary, base);
+                -webkit-mask-image: url(../img/SVG/chevron-right.svg);
+                -webkit-mask-size: cover; 
+
+                @supports (-webkit-mask-clip: url(../img/SVG/chevron-right.svg)) {
+                    // Old browsers
+                    background-image: url(../img/SVG/chevron-right.svg);
+                    background-size: cover;
+                }
+            }
         }
     }
 }
 
 .recommend {
-    &__count {
+    font-size: 1.3rem;
+    color: color(grey, darkest);
+    display: flex;
+    align-items: center;
 
+    &__count {
+        margin-right: auto;
     }
 
     &__friends {
@@ -20,6 +56,14 @@
     }
 
     &__photo {
-        
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid color(grey, white);
+
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
     }
 }
