--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,10 @@ body {
   box-shadow: 0 2rem 4.5rem rgba(0, 0, 0, 0.05); }
 
 .user-reviews {
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .logo {
   height: 3.25rem;
@@ -249,8 +252,13 @@ body {
   background: transparent;
   cursor: pointer;
   transition: all 250ms; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left 250ms; }
   .btn-inline:hover {
     color: #777; }
+    .btn-inline:hover span {
+      margin-left: 8px; }
   .btn-inline:focus {
     outline: none;
     animation: pulse 1s infinite; }
@@ -308,13 +316,45 @@ body {
       margin-right: -1.5rem; }
 
 .review {
+  position: relative;
   background: #FFF;
   box-shadow: 0 2rem 4.5rem rgba(0, 0, 0, 0.05);
   padding: 3rem;
   margin-bottom: 3.5rem; }
+  .review__text {
+    margin-bottom: 2rem;
+    z-index: 2;
+    position: relative; }
   .review__photo {
     height: 4.5rem;
     width: 4.5rem;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin-right: 1.5rem; }
   .review__user {
-    display: flex; }
+    display: flex;
+    align-items: center; }
+    .review__user-box {
+      margin-right: auto; }
+    .review__user-name {
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: .4rem; }
+    .review__user-date {
+      font-size: 1rem;
+      color: #333; }
+  .review__rating {
+    color: #eb2f64;
+    font-size: 2.3rem;
+    font-weight: 300; }
+  .review::before {
+    content: '\201C';
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    font-size: 20rem;
+    color: #EEE;
+    line-height: 1;
+    font-family: sans-serif;
+    z-index: 1;
+    overflow: hidden; }
