--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (min-width: 62.5em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open-sans', sans-serif;
@@ -26,6 +29,10 @@ body {
   background: #f7f7f7;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
   min-height: 20rem; }
+  @media only screen and (max-width: 75em) {
+    .container {
+      margin: 0;
+      max-width: 100%; } }
 
 .header {
   height: 7rem;
@@ -38,6 +45,9 @@ body {
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 56.25em) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
   background-color: #333;
@@ -56,6 +66,9 @@ body {
   padding: 4.5rem;
   background: #EEE;
   border-bottom: 1px solid #ccc; }
+  @media only screen and (max-width: 56.25em) {
+    .detail {
+      padding: 3rem; } }
 
 .description {
   flex: 0 0 60%;
@@ -63,6 +76,10 @@ body {
   margin-right: 4.5rem;
   background: #FFF;
   box-shadow: 0 2rem 4.5rem rgba(0, 0, 0, 0.05); }
+  @media only screen and (max-width: 56.25em) {
+    .description {
+      padding: 2rem;
+      margin-right: 3rem; } }
 
 .user-reviews {
   flex: 1;
@@ -155,10 +172,20 @@ body {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     position: relative; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__item {
+        flex: 1; } }
     .side-nav__item:not(:last-child) {
       margin-bottom: 1rem; }
+      @media only screen and (max-width: 56.25em) {
+        .side-nav__item:not(:last-child) {
+          margin-bottom: 0; } }
     .side-nav__item::before {
       content: '';
       position: absolute;
@@ -184,6 +211,10 @@ body {
     align-items: center;
     z-index: 10;
     position: relative; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        justify-content: center;
+        padding: 2rem; } }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
@@ -195,6 +226,9 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: #f7f7f7; }
+  @media only screen and (max-width: 56.25em) {
+    .legal {
+      display: none; } }
 
 .gallery {
   display: flex; }
@@ -306,6 +340,8 @@ body {
   align-items: center; }
   .recommend__count {
     margin-right: auto; }
+  .recommend__friends {
+    display: flex; }
   .recommend__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -313,7 +349,7 @@ body {
     border-radius: 50%;
     border: 3px solid #FFF; }
     .recommend__photo:not(:last-child) {
-      margin-right: -1.5rem; }
+      margin-right: -2rem; }
 
 .review {
   position: relative;
@@ -321,6 +357,10 @@ body {
   box-shadow: 0 2rem 4.5rem rgba(0, 0, 0, 0.05);
   padding: 3rem;
   margin-bottom: 3.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 3rem; } }
   .review__text {
     margin-bottom: 2rem;
     z-index: 2;
@@ -362,6 +402,9 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
+  @media only screen and (max-width: 56.25em) {
+    .cta {
+      padding: 2.5rem 0; } }
   .cta__book-now {
     font-size: 2rem;
     font-weight: 300;
@@ -375,6 +418,7 @@ body {
   text-transform: uppercase;
   border-radius: 100px;
   border: none;
+  cursor: pointer;
   background-image: linear-gradient(to right, #eb2f64, #BA265D);
   color: #FFF;
   overflow: hidden; }
