--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,10 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+
+    @include query-for(desktop) {
+        font-size: 50%;
+    }
 }
 
 body {
