--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -52,7 +52,7 @@
     }
 
     &__friends {
-
+        display: flex;
     }
 
     &__photo {
@@ -63,7 +63,7 @@
         border: 3px solid color(grey, white);
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -78,6 +78,11 @@
     @include boxshadowlight;
     padding: 3rem;
     margin-bottom: 3.5rem;
+
+    @include query-for(tablet) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         margin-bottom: 2rem;
