--- a/sass/components/_overview.scss
+++ b/sass/components/_overview.scss
@@ -9,6 +9,11 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @include query-for(mobile) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
     }
 
     &__stars {
@@ -42,16 +47,29 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @include query-for(mobile) {
+            padding: 0 1.5rem;
+        }
     }
 
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
+
+        @include query-for(mobile) {
+            font-size: 1.8rem;
+        }
     }
 
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+
+
+        @include query-for(mobile) {
+            font-size: .5rem;
+        }
     }
 }
 
