--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -65,6 +65,11 @@
             justify-content: center;
             padding: 2rem;
         }
+
+        @include query-for(mobile) {
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        }
     }
 
     &__icon {
@@ -72,6 +77,13 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+
+        @include query-for(mobile) {
+            margin: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
     }
 }
 
