--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -26,15 +26,16 @@
                 width: 1rem;
                 margin-right: 1rem;
 
-                // Newer browsers 
-                background: color(primary, base);
-                -webkit-mask-image: url(../img/SVG/chevron-right.svg);
-                -webkit-mask-size: cover; 
+                // Old browsers
+                background-image: url(../img/SVG/chevron-right.svg);
+                background-size: cover;
 
-                @supports (-webkit-mask-clip: url(../img/SVG/chevron-right.svg)) {
-                    // Old browsers
-                    background-image: url(../img/SVG/chevron-right.svg);
-                    background-size: cover;
+                @supports (-webkit-mask-clip: url() or (mask-image: url())) {                        
+                    // Newer browsers 
+                    background-color: color(primary, base);
+                    -webkit-mask-image: url(../img/SVG/chevron-right.svg);
+                    -webkit-mask-size: cover; 
+                    background-image: none;
                 }
             }
         }
